@@ -138,6 +138,9 @@
 	   level => 'normal',
 	   summary =>  'target configuration file name',
 	   description => 'specify the configuration file name. This parameter may not be applicable depending on your application. It may also be hardcoded in a custom backend. If not specified, the instance name will be used as base name for your configuration file.', 
+	   migrate_from => { variables => { old => '- config_file'},
+			     formula  => '$old',
+			   }
 	  },
 
        'class'
@@ -168,14 +171,8 @@
        => {
 	   type => 'leaf',
 	   value_type => 'uniline' ,
-	   level => 'hidden',
-	   warp => { follow => { b => '- backend' },
-		     rules => [ '$b eq "augeas" or $b eq "ini_file"'
-				=> { level => 'normal',
-				     mandatory => 1,
-				   }
-			      ],
-		   },
+	   status => 'deprecated',
+	   level => 'normal',
 	   description => 'Specify the configuration file (without path) that will store configuration information',
 	   },
        'set_in'
